# Spica

./: .gitignore  DRAFT_TAB_MANAGEMENT.md  README.md  index.html  package-lock.json  package.json
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  openai_client.rs
src/components/: BlueprintPanel.tsx  DescriptionGenerationModal.tsx  EventContextMenu.tsx  ModalEditor.tsx  ScenePanel.tsx  StarsPanel.tsx  WorkingArea.tsx
src/services/: llmService.ts  persistenceService.ts  prompts.ts
src/store/: useAppStore.ts
src/stores/: characterStore.ts  contentStore.ts  index.ts  sceneStore.ts  uiStore.ts
