[package]
name = "spica-writer"
version = "0.0.1"
description = "A creative writing assistant with AI integration"
authors = ["dawn"]
license = ""
repository = ""
default-run = "spica-writer"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = [ "fs-rename-file", "fs-remove-file", "fs-remove-dir", "fs-copy-file", "dialog-message", "dialog-open", "path-all", "fs-exists", "fs-read-dir", "fs-write-file", "dialog-save", "fs-create-dir", "fs-read-file", "dialog-confirm", "dialog-ask", "shell-open"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
dirs = "5.0"
dotenv = "0.15"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ] 
